feat: jmp按钮, 404页面 fix: loading和文章动画不同步的撕裂感

--- a/asset/global.css
+++ b/asset/global.css
@@ -15,10 +15,23 @@ ico {
 code {
   font-family: code;
 }
-a {
-  text-decoration: underline dashed #dee;
+
+a, jmp {
+  text-decoration: none;
   color: #dee;
   margin: 0 5px;
+  transition: text-shadow 0.2s;
+}
+a::before, jmp::before {
+  content: "\e866";
+  font-family: icon;
+  font-size: 12px;
+}
+jmp {
+  cursor: pointer;
+}
+a:hover, jmp:hover {
+  text-shadow: 0 0 3px #fff;
 }
 
 #loading {
@@ -26,7 +39,7 @@ a {
   position: absolute;
   left: 0;top: -100%;width: 100%;height: 100%;
   background-color: #2A3830;
-  transition: top 0.5s;
+  transition: top 0.3s;
 }
 #loading.act {
   top: 0;
@@ -188,7 +201,7 @@ main > article {
   width: calc(100% - 400px);
   overflow: auto;
   font-size: 18px;
-  animation: fade-in 0.2s;
+  animation: fade-in 0.3s;
   transition: transform 0.4s;
 }
 
