--- a/asset/global.css
+++ b/asset/global.css
@@ -80,7 +80,7 @@ body > header > ico:hover {
 body > header > img {
   height: 50px;
   width: 50px;
-  margin: 8px 20px 0 0;
+  margin: 7px 20px 0 0;
 }
 body > header > h2 {
   color: #abb;
@@ -115,17 +115,23 @@ body > header > buts > but:hover {
   0%, 100% {
     opacity: 0;
   }
-  30%, 60% {
+  25% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
     opacity: 1;
   }
 }
-body > header.load::after {
+body > header::after {
   content: "";
   position: absolute;
   left: 0;bottom: 0;width: 100%;
   height: 3px;
-  background-image: linear-gradient(90deg, transparent 0%, #bcc 30%, #bcc 60%, transparent 100%);
-  animation: blink 0.7s infinite;
+  background-color:#788;
+  animation: blink 2s infinite;
 }
 
 
