--- a/asset/global.css
+++ b/asset/global.css
@@ -309,6 +309,7 @@ main > article > pre > code {
   display: block;
   padding: 10px 20px;
   overflow-y: auto;
+  white-space: pre;
   font-size: 18px;
   line-height: 27px;
 }
@@ -334,6 +335,11 @@ main > article > ul > li::marker {
 main > article table {
   border-collapse: collapse;
   margin-bottom: 20px;
+  margin: 10px 0;
+  width: 100%;
+  /* 这算ntr么 */
+  display: block;
+  overflow: auto;
 }
 main > article th {
   color: #abb;
@@ -467,14 +473,14 @@ about > bg {
   body > header > buts {
     display: none;
     position: absolute;
-    top: 100px;
+    top: 110px;
     left: 0px;
     color: #dee;
   }
   body > header > buts > but {
     display: block;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 15px;
+    line-height: 18px;
     padding: 10px 40px;
   }
   body > header > mobile-menu {
@@ -496,10 +502,15 @@ about > bg {
     width: 50%;
   }
   main > article {
+    width: calc(100% - 40px);
+    overflow: scroll;
     padding: 20px;
     transition: filter 0.5s;
   }
   main.blur > article {
     filter: blur(5px);
+  }
+  main > article > pre > code {
+    font-size: 16px;
   }
 }
