--- a/asset/prism-subkey.css
+++ b/asset/prism-subkey.css
@@ -5,7 +5,7 @@
 
 code {
 	text-shadow: -1px -1px 3px #122;
-	white-space: pre-wrap;
+	white-space: pre;
   margin: 0 5px;
   padding: 0 5px;
   border-radius: 5px;
