feat: prim三篇 fix: 杀!clone版本方法!

--- a/asset/global.css
+++ b/asset/global.css
@@ -274,6 +274,9 @@ main > article > h2 {
   position: relative;
   display: inline-block;
 }
+main > article > h2 > code {
+  background: none;
+}
 main > article > h2::after {
   content: "";
   position: absolute;
