--- a/asset/global.css
+++ b/asset/global.css
@@ -457,6 +457,35 @@ about > bg {
   background-repeat: repeat;
 }
 
+click-effect {
+  z-index: 101;
+  position: fixed;
+  left: 0;top: 0;width: 100%;height: 100%;
+  pointer-events: none;
+}
+
+@keyframes click-effect {
+  0% {
+    opacity: 1;
+    width: 10px;
+    height: 10px;
+    transform: rotate(45deg) translate(0,0);
+  }
+  100% {
+    opacity: 0;
+    width: 40px;
+    height: 40px;
+    transform: rotate(45deg) translate(-20px, 0px);
+  }
+}
+click-effect > div {
+  position: absolute;
+  transform: rotate(45deg);
+  transform-origin: 50% 50%;
+  box-shadow: 0 0 3px 2px #dee;
+  animation: click-effect 0.3s;
+}
+
 
 @media screen and (max-width: 1000px) {
   main > nav p {
